* fixed NSIS target for cpack (for cross-compiling)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,39 @@ if (GIT_FOUND)
 	message(STATUS "Neutrino package version: ${CPACK_PACKAGE_VERSION}")
 endif()
 
+# targets
+add_subdirectory (nPhysImage)
+add_subdirectory (src)
+
+## cpack definitions
+#SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Neutrino")
+#SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReadMe.txt")
+#SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/Copyright.txt")
+if (WIN32)
+	# use nsis
+	list(APPEND CPACK_GENERATOR NSIS)
+	message (STATUS "NSIS compile LIBS: ${LIBS}")
+
+	SET(CPACK_PACKAGE_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon.ico")
+	#SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin/Neutrino.exe")
+	set(CPACK_PACKAGE_EXECUTABLES "Neutrino" "Neutrino")
+	set(CPACK_CREATE_DESKTOP_LINKS "Neutrino")
+	SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY} Neutrino")
+	#SET(CPACK_NSIS_HELP_LINK "http:\\\\\\\\www.my-project-home-page.org")
+	#SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\www.my-personal-home-page.com")
+	#SET(CPACK_NSIS_CONTACT "me@my-personal-home-page.com")
+	SET(CPACK_NSIS_MODIFY_PATH ON)
+
+	# looks for runtume deps in CMAKE_FIND_ROOT_PATH/runtime
+	file (GLOB RUNTIME_DEPS ${CMAKE_FIND_ROOT_PATH}/runtime/*dll)
+	file (GLOB RUNTIME_PLATFORM_DEPS ${CMAKE_FIND_ROOT_PATH}/runtime/platforms/*dll)
+
+	#message (STATUS "nsis runtime: ${RUNTIME_DEPS} ${RUNTIME_PLATFORM_DEPS}")
+	install (FILES ${RUNTIME_DEPS} DESTINATION bin)
+	install (FILES ${RUNTIME_PLATFORM_DEPS} DESTINATION bin/platforms)
+
+endif()
+
 if (DEBIAN)
 	message (STATUS "Using CPackDeb for packaging")
 
@@ -56,6 +89,4 @@ endif()
 include (CPack) # this to be included LAST with resp. to its vars
 
 
-add_subdirectory (nPhysImage)
-add_subdirectory (src)
 
