--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,7 @@ include(FindGit)
 
 message (STATUS "${PROJECT_NAME} version : ${${PROJECT_NAME}_VERSION_STRING_FULL}")
 set (CMAKE_CXX_FLAGS "-O3 -std=c++11")
-set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -Wall -D__phys_debug=10")
+set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -Wall -Wextra -D__phys_debug=10")
 
 add_definitions(-D__VER="${${PROJECT_NAME}_VERSION_STRING_FULL}")
 
@@ -133,6 +133,9 @@ add_definitions(-DHAVE_NPHYSIMAGE)
 if(APPLE) 
 #     add_executable(Neutrino MACOSX_BUNDLE ${myApp_ICON} ${SOURCES} ${MOC_SRCS} ${RES_SOURCES} ${UI_HEADERS} )
     add_executable(${PROJECT_NAME} WIN32 MACOSX_BUNDLE ${myApp_ICON} ${SOURCES} ${MOC_SRCS} ${UI_HEADERS} ${RES_SOURCES})
+elseif(WIN32)
+	set (RC_WIN "${${PROJECT_NAME}_SOURCE_DIR}/resources/neutrino.rc")
+	add_executable(${PROJECT_NAME} WIN32 ${SOURCES} ${MOC_SRCS} ${UI_HEADERS} ${RES_SOURCES} ${RC_WIN})
 else()
     add_executable(Neutrino ${SOURCES} ${MOC_SRCS} ${RES_SOURCES} ${UI_HEADERS} )
 endif()
@@ -192,7 +195,8 @@ endif()
 set(ICONS_DIR "${${PROJECT_NAME}_SOURCE_DIR}/resources/icons")
 
 if(CMAKE_COMPILER_IS_GNUCXX OR APPLE)
-	add_definitions(-Wall -Wextra)
+	#add_definitions(-Wall -Wextra)
+	# -Wxx are compiler flags and NOT definitions (otherwise: messes up resource compiler)
 	if(CMAKE_BUILD_RELEASE)
 #		add_definitions(-Werror)
 	endif()
@@ -223,7 +227,7 @@ if(APPLE)
 endif()
 
 message(STATUS "${PROJECT_NAME} will be installed to ${CMAKE_INSTALL_PREFIX}")
-install(TARGETS ${PROJECT_NAME} DESTINATION ${BIN_INSTALL_DIR})
+#install(TARGETS ${PROJECT_NAME} DESTINATION ${BIN_INSTALL_DIR})
 
 set(LICENSE_FILE "LICENSE.txt")
 
@@ -242,18 +246,18 @@ message(STATUS ${${PROJECT_NAME}_SOURCE_DIR})
 set(CPACK_RESOURCE_FILE_README "${README_FILE}")
 
 if(WIN32)
-    set(CPACK_GENERATOR "NSIS")
-    set(CPACK_PACKAGE_EXECUTABLES "${PROJECT_NAME}" "${PROJECT_NAME}")
-    set(CPACK_PACKAGE_INSTALL_DIRECTORY "${PROJECT_NAME}")
-    set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME} ${PROJECT_VERSION}")
-    set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/${LICENSE_FILE}")
-    set(CPACK_NSIS_EXECUTABLES_DIRECTORY "${BIN_INSTALL_DIR}")
-    #set(CPACK_NSIS_MUI_ICON "${PROJECT_ICONS_DIRECTORY}/NSIS.ico")
-    #set(CPACK_PACKAGE_ICON "${PROJECT_ICONS_DIRECTORY}\\\\NSISHeader.bmp")
-    set(CPACK_NSIS_URL_INFO_ABOUT "http://${PROJECT_DOMAIN}")
-    set(CPACK_NSIS_INSTALLED_ICON_NAME "${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
-    set(CPACK_NSIS_MENU_LINKS "${LICENSE_FILE}" "License" "${README_FILE}" "Readme")
-    set(CPACK_NSIS_MUI_FINISHPAGE_RUN "${CPACK_NSIS_INSTALLED_ICON_NAME}")
+#    set(CPACK_GENERATOR "NSIS")
+#    set(CPACK_PACKAGE_EXECUTABLES "${PROJECT_NAME}" "${PROJECT_NAME}")
+#    set(CPACK_PACKAGE_INSTALL_DIRECTORY "${PROJECT_NAME}")
+#    set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME} ${PROJECT_VERSION}")
+#    set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/${LICENSE_FILE}")
+#    set(CPACK_NSIS_EXECUTABLES_DIRECTORY "${BIN_INSTALL_DIR}")
+#    #set(CPACK_NSIS_MUI_ICON "${PROJECT_ICONS_DIRECTORY}/NSIS.ico")
+#    #set(CPACK_PACKAGE_ICON "${PROJECT_ICONS_DIRECTORY}\\\\NSISHeader.bmp")
+#    set(CPACK_NSIS_URL_INFO_ABOUT "http://${PROJECT_DOMAIN}")
+#    set(CPACK_NSIS_INSTALLED_ICON_NAME "${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
+#    set(CPACK_NSIS_MENU_LINKS "${LICENSE_FILE}" "License" "${README_FILE}" "Readme")
+#    set(CPACK_NSIS_MUI_FINISHPAGE_RUN "${CPACK_NSIS_INSTALLED_ICON_NAME}")
 elseif(APPLE)
      set(CMAKE_INSTALL_PREFIX "/Applications")
      set(CPACK_GENERATOR "DragNDrop")
@@ -281,7 +285,8 @@ else()
     set(EXECUTABLE "${BIN_INSTALL_DIR}/${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
 endif()
 
-if(APPLE OR WIN32)
+#if(APPLE OR WIN32)
+if(APPLE)
     include(DeployQt4)
     install_qt4_executable("${EXECUTABLE}")
 endif()
