--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -1,6 +1,8 @@
 # this is the frigging nPhysImage cmakelists
 cmake_minimum_required (VERSION 3.0)
 
+## local (nPhys) compile options
+add_compile_options(-fPIC)
 
 if (UNIX AND (NOT APPLE))
     message(STATUS "Linux")
@@ -12,13 +14,6 @@ if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
-
-add_compile_options(-std=c++0x)
-add_compile_options(-fPIC)
-
-
-set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -Wall -D__phys_debug=10")
-set (CMAKE_CXX_FLAGS "-O3")
 
 
 
