--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,14 @@ endif()
 ## ADD DEB DESCRIPTION
 ## CHECK LIB RPATH in PACKS
 
+add_compile_options(-std=c++11)
+add_compile_options(-Wall)
+add_compile_options(-fPIC)
+
+
+set (CMAKE_CXX_FLAGS "-O3")
+set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -D__phys_debug=10")
+
 
 set (CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/resources/cmake)
 
