--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -237,8 +237,6 @@ set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
 set(CPACK_PACKAGE_VENDOR "${PROJECT_VENDOR}")
 
-message(STATUS ${${PROJECT_NAME}_SOURCE_DIR})
-
 set(CPACK_RESOURCE_FILE_README "${README_FILE}")
 
 if(WIN32)
@@ -256,17 +254,17 @@ if(WIN32)
 #    set(CPACK_NSIS_MUI_FINISHPAGE_RUN "${CPACK_NSIS_INSTALLED_ICON_NAME}")
 endif()
 
-if(APPLE)
-     set(CMAKE_INSTALL_PREFIX "/Applications")
-     set(CPACK_GENERATOR "Bundle")
-     set(CPACK_DMG_FORMAT "UDBZ")
-     set(CPACK_DMG_VOLUME_NAME "${PROJECT_NAME}")
-     set(CPACK_SYSTEM_NAME "OSX")
-     set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${${PROJECT_NAME}_VERSION_STRING_FULL}")
-     set(CPACK_PACKAGE_ICON "${ICONS_DIR}/icon.icns")
-     set(CPACK_DMG_DS_STORE "${ICONS_DIR}/../macPackage/DS_Store")
-     set(CPACK_DMG_BACKGROUND_IMAGE "${ICONS_DIR}/../macPackage/sfondo.png")
-endif()
+#if(APPLE)
+#     set(CMAKE_INSTALL_PREFIX "/Applications")
+#     set(CPACK_GENERATOR "Bundle")
+#     set(CPACK_DMG_FORMAT "UDBZ")
+#     set(CPACK_DMG_VOLUME_NAME "${PROJECT_NAME}")
+#     set(CPACK_SYSTEM_NAME "OSX")
+#     set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${${PROJECT_NAME}_VERSION_STRING_FULL}")
+#     set(CPACK_PACKAGE_ICON "${ICONS_DIR}/icon.icns")
+#     set(CPACK_DMG_DS_STORE "${ICONS_DIR}/../macPackage/DS_Store")
+#     set(CPACK_DMG_BACKGROUND_IMAGE "${ICONS_DIR}/../macPackage/sfondo.png")
+#endif()
 
 if(UNIX)
     set(CPACK_GENERATOR "TBZ2")
@@ -285,10 +283,4 @@ else()
     set(EXECUTABLE "${BIN_INSTALL_DIR}/${PROJECT_NAME}${CMAKE_EXECUTABLE_SUFFIX}")
 endif()
 
-#if(APPLE OR WIN32)
-if(APPLE)
-    include(DeployQt4)
-    install_qt4_executable("${EXECUTABLE}")
-endif()
 
-#include (CPack)
