--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,8 +65,7 @@ set (LIBPATHS /usr/lib /usr/local/lib ../lib)
 ## sources
 list (APPEND SOURCES 
     neutrino.cc
-    graphics/neutrinoPalettes.cc
-    graphics/nScene.cc graphics/nView.cc graphics/nRect.cc graphics/nMouse.cc 
+    graphics/neutrinoPalettes.cc graphics/nView.cc graphics/nRect.cc graphics/nMouse.cc
     graphics/nLine.cc graphics/nTics.cc graphics/nPoint.cc graphics/nEllipse.cc 
     panThread.cc nPlug.cc pans/nFocalSpot.cc pans/nPhysProperties.cc  
     pans/VISAR/nVisarZoomer.cc pans/VISAR/nVisar.cc pans/nFindPeaks.cc 
